archive/kubernetes/apps/default/qbittorrent/app/ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: qbittorrent
  annotations:
    cert-manager.io/cluster-issuer: 'letsencrypt'
    kubernetes.io/ingress.class: 'traefik'
spec:
  rules:
    - host: qbittorrent.fadhlika.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: qbittorrent
                port:
                  name: http
  tls:
    - secretName: qbittorrent-tls
      hosts:
        - qbittorrent.fadhlika.com
